clusters/apps/env/production/soho/emqx/ingressroute.emqx.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: emqx
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: emqx.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`emqx.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: authentik
          namespace: auth-system
      priority: 10
      services:
        - name: emqx
          port: 18083
    - kind: Rule
      match: "Host(`emqx.${FAMILY_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: emqx.${FAMILY_DOMAIN}
