clusters/apps/env/production/soho/emqx/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emqx
spec:
  hosts:
    - 'emqx.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 18083
            host: emqx.soho.svc.cluster.local
          weight: 100
